--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,5 @@ references_codexglue_code_to_text-python.json
 references_codexglue_code_to_text-python-left.json
 references_codexglue_code_to_text-java.json
 logs.json
+references_humaneval.json
+references_mbpp.json
